--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "firebase": "^12.3.0",
     "firebase-admin": "^13.6.0",
     "leaflet": "^1.9.4",
-    "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^15.5.9",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hook-form": "^7.64.0",
     "react-leaflet": "^5.0.0",
     "recharts": "^3.2.1"
